QE-569 Fixes section heading spacing issue

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/section/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/section/style.scss
@@ -28,10 +28,10 @@
 		}
 
 		@media screen and (min-width: grid-size(md)) {
-			margin-bottom: var(--spacing-8);
+			margin-bottom: var(--spacing-7);
 
 			+ #{$self}__description {
-				margin-top: calc(-1 * var(--spacing-7));
+				margin-top: calc(-1 * var(--spacing-6));
 			}
 		}
 
@@ -53,7 +53,7 @@
 		margin-bottom: var(--spacing-6);
 
 		@media screen and (min-width: grid-size(md)) {
-			margin-bottom: var(--spacing-8);
+			margin-bottom: var(--spacing-7);
 		}
 	}
 
